@@ -160,6 +160,8 @@ Release 0.5.0 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-592 webhcat - handle change in hive table/partition not found error (thejas via gates)
+
   HCAT-554 Loading data using HCatLoader() from a table on non default namenode fails. (amalakar via avandana)
 
   HCAT-586 checkstyle fails every time complaining that it's own header file does not have the proper header (gates)
